cmake_minimum_required(VERSION 2.6)

PROJECT(view)

FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE(${QT_USE_FILE})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

SET(CMAKE_INSTALL_PREFIX "./bin")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE(CTEST)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/DataStorage)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/FrameWork)

ADD_SUBDIRECTORY(DataStorage)
ADD_SUBDIRECTORY(FrameWork)
ADD_SUBDIRECTORY(DataIO)
ADD_SUBDIRECTORY(Interaction2D)
ADD_SUBDIRECTORY(Interaction3D)
ADD_SUBDIRECTORY(Layout)
ADD_SUBDIRECTORY(viewer)

FILE(COPY ${PROJECT_SOURCE_DIR}/icon DESTINATION ${PROJECT_BINARY_DIR}/bin)
FILE(COPY ${PROJECT_SOURCE_DIR}/default DESTINATION ${PROJECT_BINARY_DIR}/bin)

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/icon DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/default DESTINATION ${CMAKE_INSTALL_PREFIX})

include(InstallRequiredSystemLibraries)

#configure_file(
#  ${PROJECT_SOURCE_DIR}/FixBundle.cmake.in
#  ${PROJECT_BINARY_DIR}/FixBundle.cmake
#  @ONLY)

#install (SCRIPT ${PROJECT_BINARY_DIR}/FixBundle.cmake)

SET(CPACK_NSIS_MUI_ICON
    "${PROJECT_SOURCE_DIR}/icon/logo.ico")
	SET(CPACK_NSIS_MUI_UNIICON
    "${PROJECT_SOURCE_DIR}/icon/logo.ico")

SET(CPACK_CREATE_DESKTOP_LINKS viewer)

INCLUDE(CPack)