
#添加Qt类头文件在此命令中

SET(QHeader 
vDataReader.h
)

AUX_SOURCE_DIRECTORY(. DATAIO_SOURCE_FILE)

#生成Qt的moc文件

QT4_WRAP_CPP(MOCSrcs ${QHeader})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/tool)

add_definitions(-DMARKUP_STL)
add_definitions(-DV_DATA_IO_EXPORTS)

ADD_LIBRARY(DataReader SHARED  ${DATAIO_SOURCE_FILE} 
  ${MOCSrcs})



#添加对应的lib在这里
TARGET_LINK_LIBRARIES(DataReader
  DataStorage  
  FrameWork
  QVTK
  vtkRendering
  ${QT_LIBRARIES})

IF(WIN32)
INSTALL(TARGETS DataReader RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/tool)
ELSE(WIN32)
INSTALL(TARGETS DataReader LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/tool)
ENDIF(WIN32)