SET(DATASTORAGE_INCLUDE_FILE
 
yDataStorageDll.h

yDataStorageConfigure.h

yWidgetData.h

yDataNodeProperty.h
yDataNodeBase.h
yDataNode.h

yDataNodeStorage.h
yDataManagement.h
yImageStatistics.h
yScalarToColor.h
)



AUX_SOURCE_DIRECTORY(. DATASTORAGE_SOURCE_FILE)


ADD_LIBRARY(DataStorage SHARED ${DATASTORAGE_INCLUDE_FILE} ${DATASTORAGE_SOURCE_FILE})


TARGET_LINK_LIBRARIES(DataStorage

vtkCommon
vtkFiltering

vtkImaging

${ITK_LIBRARIES})

IF(WIN32)
INSTALL(TARGETS DataStorage RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
ELSE(WIN32)
INSTALL(TARGETS DataStorage LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
ENDIF(WIN32)


ADD_SUBDIRECTORY(Test)