
AUX_SOURCE_DIRECTORY(. DATASTORAGE_SOURCE_FILE)

IF(WIN32)
ADD_EXECUTABLE(viewer WIN32
  ${DATASTORAGE_SOURCE_FILE})
ELSE(WIN32)
ADD_EXECUTABLE(viewer
  ${DATASTORAGE_SOURCE_FILE})
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(viewer
  DataStorage  
  FrameWork
  QVTK
  ${QT_LIBRARIES}
  ${QT_QTMAIN_LIBRARY})

INSTALL(TARGETS viewer DESTINATION ${CMAKE_INSTALL_PREFIX})